--- a/content/sass/base/_base.scss
+++ b/content/sass/base/_base.scss
@@ -5,13 +5,13 @@
 @import 'typography';
 @import 'default';
 
-// [data-aos] {
-//   opacity: 0;
-//   filter: blur(200px);
-//   transition: opacity 0.8s ease, filter 0.8s ease;
-// }
+[data-aos] {
+  opacity: 0;
+  filter: blur(200px);
+  transition: opacity 0.8s ease, filter 0.8s ease;
+}
 
-// [data-aos].aos-animate {
-//   opacity: 1;
-//   filter: blur(0);
-// }
+[data-aos].aos-animate {
+  opacity: 1;
+  filter: blur(0);
+}
