--- a/content/sass/layout/_home.scss
+++ b/content/sass/layout/_home.scss
@@ -144,6 +144,7 @@
             }
             &:last-child{
                 .col-md-12{
+                    overflow: hidden;
                     .nav-pills{
                         background-color: var(--grey);
                         padding: 6px;
@@ -272,7 +273,7 @@
                                 transform: scale(1);
                                 }
                                 50%{
-                                transform: scale(0.85);
+                                transform: scale(0.7);
                                 }
                                 100%{
                                     transform: scale(1);
