--- a/content/sass/layout/_home.scss
+++ b/content/sass/layout/_home.scss
@@ -49,6 +49,9 @@
                     z-index: 1;
                     -webkit-user-select: none;
                     user-select: none;
+                    @include breakpoint(767){
+                        width: 100vw;
+                    }
                     h1{ 
                         position: absolute; 
                     }
@@ -402,7 +405,6 @@
                 z-index: 1;
                 @include breakpoint(767){
                     width: 80px;
-                    right: -1px;
                 }
             }
         }
