--- a/content/sass/base/_buttons.scss
+++ b/content/sass/base/_buttons.scss
@@ -44,7 +44,7 @@
 @media (hover: hover) {
   .button-stroke:hover {
     color: var(--bg-color);
-    &:hover, &:active{
+    &:hover{
         .button-text{
             color: var(--bg-color);
             svg{
@@ -73,6 +73,15 @@
     &:hover{
       .button-text{
         transition: color 0.15s cubic-bezier(0.645, 0.045, 0.355, 1);
+      }
+    }
+  }
+  &:active{
+    color: var(--bg-color);
+    .button-text {
+      color: var(--bg-color);
+      svg {
+        fill: var(--bg-color);
       }
     }
   }
