Changed the primary blue color slightly

--- a/content/sass/base/_variables.scss
+++ b/content/sass/base/_variables.scss
@@ -14,7 +14,7 @@
 [data-theme='light']{
     --bg-color: #ECECEC;
     --text-color: #1B1B1B;
-    --primary-color: #1600FF;
+    --primary-color: #1300E0;
     --grey: #D8D8D8;
     --gradient: 167, 159, 255;
     --gradient-end: 236, 236, 236;
